Links in file listing like `/dlRef?f=13&name=` are not user-friendly #38 rfct